SDN / Fix keyword alignement in metadata view.

--- a/web-ui/src/main/resources/catalog/style/gn_metadata.less
+++ b/web-ui/src/main/resources/catalog/style/gn_metadata.less
@@ -425,6 +425,10 @@ ul.container-list {
     }
   }
 }
+/* Fix keyword layout */
+.gn-metadata-view dd > ul {
+  padding-top: 0px !important;
+}
 
 [data-gn-metadata-contacts], [gn-metadata-contacts] {
   .gn-contact {
